--- a/mountain_diamond.html
+++ b/mountain_diamond.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="content-type" content="text/html">
+	
+	<script type="text/javascript" src="scripts/babylon.2.4.js"></script>
 	<title>Mountain Diamond</title>
 	<style>
 		canvas{
@@ -22,13 +24,12 @@
 		}
 	</style>
 </head>
-
-
 <body>
 	<h2>Mountain Diamond</h2>
 	<canvas id="canvas" width="800px" height="600px">
 		Your browser doesn't support the canvas element and you can't run this game.
 	</canvas>
+	<script type="text/javascript" src="scripts/app.js"></script>
 	<!--?Navodila za igranje?-->
 </body>
 
