--- a/mountain_diamond.html
+++ b/mountain_diamond.html
@@ -3,34 +3,34 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="content-type" content="text/html">
-	
-	<script type="text/javascript" src="scripts/babylon.2.4.js"></script>
 	<title>Mountain Diamond</title>
 	<style>
-		canvas{
-			width: 80vw;
-			height: 80vh;
-			border: 1px solid black;
-			padding-left: 0;
-		    padding-right: 0;
-		    margin-left: auto;
-		    margin-right: auto;
-		    display: block;
+		html, body {
+			overflow: hidden;
+			width: 100%;
+			height: 100%;
+			margin: 0;
+			padding: 0;
 		}
+		#renderCanvas {
+			width: 100%;
+			height: 100%;
+			touch-action: none;
+	  	}
+		
 
 		h2{
 			text-align: center;
 			font-family: "Helvetica", "Verdana";
 		}
 	</style>
+		<script src="js/babylon.2.4.js"></script>
+		<script src="js/hand.minified-1.2.js"></script>
+		<script src="js/game.js"></script>
 </head>
 <body>
 	<h2>Mountain Diamond</h2>
-	<canvas id="canvas" width="800px" height="600px">
-		Your browser doesn't support the canvas element and you can't run this game.
-	</canvas>
-	<script type="text/javascript" src="scripts/app.js"></script>
+	<canvas id="renderCanvas" ></canvas>
 	<!--?Navodila za igranje?-->
 </body>
-
 </html>
