--- a/mountain_diamond.html
+++ b/mountain_diamond.html
@@ -26,6 +26,7 @@
 	</style>
 		<script src="js/babylon.2.4.js"></script>
 		<script src="js/hand.minified-1.2.js"></script>
+		<script src="js/gl-matrix.js"></script>
 		<script src="js/game.js"></script>
 </head>
 <body>
