--- a/mountain_diamond.html
+++ b/mountain_diamond.html
@@ -16,6 +16,7 @@
 			width: 100%;
 			height: 100%;
 			touch-action: none;
+			border: 1px solid black;
 	  	}
 		
 
@@ -26,6 +27,7 @@
 	</style>
 		<script src="js/babylon.2.4.js"></script>
 		<script src="js/hand.minified-1.2.js"></script>
+		<script src="js/gl-matrix.js"></script>
 		<script src="js/game.js"></script>
 </head>
 <body>
