--- a/mountain_diamond.html
+++ b/mountain_diamond.html
@@ -28,6 +28,7 @@
 		<script src="js/hand.minified-1.2.js"></script>
 		<script src="js/gl-matrix.js"></script>
 		<script src="js/game.js"></script>
+		<script src="js/cannon.js"></script>
 </head>
 <body>
 	<h2>Mountain Diamond</h2>
