dodal še en canvas
za menjavanje scen

--- a/mountain_diamond.html
+++ b/mountain_diamond.html
@@ -17,7 +17,11 @@
 			height: 100%;
 			touch-action: none;
 	  	}
-		
+	  	#animationCanvas {
+			width: 100%;
+			height: 100%;
+			touch-action: none;
+	  	}
 
 		h2{
 			text-align: center;
@@ -31,7 +35,8 @@
 		<script src="js/cannon.js"></script>
 </head>
 <body>
-	<h2>Mountain Diamond</h2>
+	<!-- <h2>Mountain Diamond</h2> -->
+	<canvas id="animationCanvas" ></canvas>
 	<canvas id="renderCanvas" ></canvas>
 	<!--?Navodila za igranje?-->
 </body>
