--- a/mountain_diamond.html
+++ b/mountain_diamond.html
@@ -12,13 +12,11 @@
 			margin: 0;
 			padding: 0;
 		}
-		#renderCanvas {
+		#renderCanvas, #animationCanvas {
 			width: 100%;
 			height: 100%;
 			touch-action: none;
 	  	}
-		
-
 		h2{
 			text-align: center;
 			font-family: "Helvetica", "Verdana";
@@ -28,9 +26,11 @@
 		<script src="js/hand.minified-1.2.js"></script>
 		<script src="js/gl-matrix.js"></script>
 		<script src="js/game.js"></script>
+		<script src="js/cannon.js"></script>
 </head>
 <body>
-	<h2>Mountain Diamond</h2>
+	<!-- <h2>Mountain Diamond</h2> -->
+	<canvas id="animationCanvas" ></canvas>
 	<canvas id="renderCanvas" ></canvas>
 	<!--?Navodila za igranje?-->
 </body>
