--- a/mountain_diamond.html
+++ b/mountain_diamond.html
@@ -12,11 +12,17 @@
 			margin: 0;
 			padding: 0;
 		}
-		#renderCanvas, #animationCanvas {
+		#renderCanvas {
 			width: 100%;
 			height: 100%;
 			touch-action: none;
 	  	}
+	  	#animationCanvas {
+			width: 100%;
+			height: 100%;
+			touch-action: none;
+	  	}
+
 		h2{
 			text-align: center;
 			font-family: "Helvetica", "Verdana";
@@ -27,11 +33,15 @@
 		<script src="js/gl-matrix.js"></script>
 		<script src="js/game.js"></script>
 		<script src="js/cannon.js"></script>
+		<script src="js/screens.js"></script>
 </head>
 <body>
 	<!-- <h2>Mountain Diamond</h2> -->
 	<canvas id="animationCanvas" ></canvas>
 	<canvas id="renderCanvas" ></canvas>
 	<!--?Navodila za igranje?-->
+	<img src="animation/landing.jpg" id="landingImage">
+	<img src="animation/stage_break.jpg" id="stageBreakImage">
+	<img src="animation/stage_break.jpg" id="endImage">
 </body>
 </html>
