--- a/mountain_diamond.html
+++ b/mountain_diamond.html
@@ -41,7 +41,8 @@
 	<canvas id="renderCanvas" ></canvas>
 	<!--?Navodila za igranje?-->
 	<img src="animation/landing.jpg" id="landingImage">
-	<img src="animation/stage_break.jpg" id="stageBreakImage">
+	<!--<img src="animation/stage_break.jpg" id="stageBreakImage">
 	<img src="animation/stage_break.jpg" id="endImage">
+	<video src="animation/intro2.mp4" controls id="videoIntro"></video>-->
 </body>
 </html>
